2002-04-10  gunter  <techgunter@yahoo.com>

	* gtk-splitter.c
	Enhanced the GUI a little bit:  Made 'Open' and 'Output' buttons the same size and added space
	between the buttons and their respective text entry boxes. 

	* dostextfile.c
	Added more characters to filter out when dosifying a file name.

2002-04-08  gunter  <techgunter@yahoo.com>

	* dostextfile.c
	'+' is now converted to underscore when dosifying a file name.

2002-04-06  gunter  <techgunter@yahoo.com>

	* file_selection.c
	Disabled the ability to choose a file when selecting the output directory.

2002-03-11  gunter  <techgunter@yahoo.com>

	* AUTHORS, configure.in, Makefile.am, README, src/Makefile.am, TODO:
        Modified the GNU distribution files.

        * src/split.c:
	When combining files using a batchfile, the original file name is now outputted.  
        The user doesn't have to remember what the file name was before it got changed to be DOS
        compatible.

2002-03-08  gunter  <techgunter@yahoo.com>

	* AUTHORS, ChangeLog, configure.in, INSTALL, install-sh, Makefile.am, missing, mkinstalldirs, 
          NEWS, README, src/Makefile.am, TODO:
	First attempt at using autoconf and automake.

2002-03-04  gunter  <techgunter@yahoo.com>

	* dostextfile.h, error.c, error.h, file_selection.c, file_selection.h, globals.h, gtk-splitter.c,
          progress.c, progress.h, split.c, split.h, callbacks.c, callbacks.h, 
          combine.c, combine.h, dostextfile.c, Makefile:
	Re-arranged the directory layout.  Source files are now in src/.

2002-03-01  gunter  <techgunter@yahoo.com>

	* dostextfile.c, split.c:
	Fixed a bug in dostextfile.c where ONLY file names longer than 12 characters would have spaces
        converted to underscores.  All file names that contain spaces should have the spaces converted
        to underscores when dealing with batchfiles.

	* combine.c, split.c:
	Cleaned up the code in split.c and added some comments.

	* combine.c: